[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "steezy"
version = "2.1.0"
description = "Ghetto Yara Generation."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "r2pipe",
    "rzpipe",
    "yara-python",
]

[project.scripts]
steezy = "steezy.__main__:main"
